Bug 93904 - Some leaks in parse_arguments()
Summary: Some leaks in parse_arguments()
Status: RESOLVED FIXED
Alias: None
Product: Bustle
Classification: Unclassified
Component: General (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Will Thompson
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-01-28 15:08 UTC by Jonny Lamb
Modified: 2016-01-28 15:20 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
bustle-pcap: stop leaking so much in parse_arguments() (2.42 KB, patch)
2016-01-28 15:08 UTC, Jonny Lamb
Details | Splinter Review

Description Jonny Lamb 2016-01-28 15:08:55 UTC
Created attachment 121353 [details] [review]
bustle-pcap: stop leaking so much in parse_arguments()

Heresy!
Comment 1 Will Thompson 2016-01-28 15:20:26 UTC
Attachment 121353 [details] pushed as 9b32105 - bustle-pcap: stop leaking so much in parse_arguments()


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.