bustle-pcap: stop leaking so much in parse_arguments()

https://bugs.freedesktop.org/show_bug.cgi?id=93904